--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,13 @@ author: Javier Lecuona <javierlecuona@gmail.com>
 description: A library that builds the abstract syntax tree for a JSON string.
 homepage: https://github.com/javiercbk/json_ast
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 dependencies:
-  grapheme_splitter: "^1.0.0"
+  grapheme_splitter: 
+    git:
+      url: https://github.com/alann-maulana/grapheme_splitter
+      ref: null-safety
 
 dev_dependencies:
-  test: "^1.3.0"
-  path: "^1.5.1"
+  test: ^1.17.12
+  path: ^1.8.0
